ops/k8s/mozhi/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: mozhi-api-cpu-svc
  namespace: mozhi
  labels:
    app: mozhi-api-cpu
    org: mozhi
spec:
  selector:
    app: mozhi-api-cpu
    tier: backend
  ports:
  - protocol: "TCP"
    port: 8088
    targetPort: 8088
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mozhi-api-cpu
  namespace: mozhi
  labels:
    org: mozhi
    app: mozhi-api-cpu
spec:
  selector:
    matchLabels:
      app: mozhi-api-cpu
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: mozhi-api-cpu
        tier: backend
        org: mozhi
    spec:
      containers:
        - name: mozhi-api-cpu
          imagePullPolicy: Always
          image: mageswaran1989/mozhi-api-cpu:latest
          ports:
            - name: http
              containerPort: 8088
          resources:
            # You must specify requests for CPU to autoscale
            # based on CPU utilization
            requests:
              cpu: "250m"
---
