ops/k8s/mozhi/aws-alb-ingress-controller.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mozhi-api-aws-ingress
  namespace: mozhi
  labels:
    org: mozhi
  # https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.3/guide/ingress/annotations/  
  annotations:
   kubernetes.io/ingress.class: alb
   alb.ingress.kubernetes.io/scheme: internet-facing
   alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/
            backend:
              serviceName: mozhi-api-cpu-svc
              servicePort: 8088
          - path: /
            backend:
              serviceName: mozhi-ui-cpu-svc
              servicePort: 8080
