ops/k8s/mozhi/aws-nginx-ingress-controller.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mozhi-api-aws-nginx-ingress
  namespace: mozhi
  labels:
    org: mozhi
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
           more_set_headers "Access-Control-Allow-Origin: $http_origin";
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
#    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For"
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/(.*)
        backend:
          serviceName: mozhi-api-cpu-svc
          servicePort: 8088
      - path: /(.*)
        backend:
          serviceName: mozhi-ui-cpu-svc
          servicePort: 8080
